Update MyGameStateFactory.java
60 tests passed.